<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultasTransito</string>
    <string name="title">Multas de Transito</string>
    
    
    <!-- Strings para la activity Acerca de -->
    <string name="pueblaAyto">Ayuntamiendo De Puebla</string>
    <string name="versionApp">Multas de Transito Versión 1.0</string>
    <string name="pueblaAytoEmpresa">2014-2018 </string>
    <string name="pueblaAytoDerechos">Todos los derechos reservados</string>
    <string name="menuAcercaDe">Acerca de...</string>
    <string name="menuSalir">Salir</string>
    
    
    
    <!-- Strings para el menu principal -->
    <string name="nom_user">Listado de Multas</string>
    <string name="email_user">Ayuntamiento de Puebla</string>
    <string name="image_icon_menu">Menu</string>
    <string name="textMenu">N/D</string>
    <string name="drawer_open">Menu abierto</string>
    <string name="drawer_close">Menu cerrado</string>
    <string name="clear"></string> 
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    
    
     <!-- Array del menu principal -->
     <string-array name="menu_principal">
         <item>Comida</item>
         <item>Café</item>
         <item>Para salir de noche</item>
         <item>Sauld y bienestar</item>
         <item>Tiendas</item>
         <item>Cosas del trabajo</item>
     </string-array>
    
    
     <!-- Progres Bar Tittle -->
     <string name="tituloProgresBar">Conectando...</string>
     
     
     
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <!-- Layout elementos  -->
    <string	name="id_tipo_multa">II</string>
    <string	name="text_tipo_multa">Multas</string>
    
    <string	name="num_frecuente">La más frecuente</string>
    
    <string	name="txt_frecuente">Frecuente</string>
    <string	name="num_frecuente_id">1</string>
    <string	name="titulo_infraccion">Infracción</string>
    <string	name="infraccion">Conducir sin el cinturón de seguridad puesto</string>
    <string	name="fundamento_legal">Fundamento Legal</string>
    <string	name="fundamento">Artículo 304, fracción II</string> 
    <string	name="titulo_multa">Multa</string>
    <string	name="multa">De 8 a 12 días</string>
    
    <string	name="titulo_salario">Salario Minimo</string>
    <string	name="salario">$56.50</string>
    <string	name="titulo_rango_precio">Rango de costos</string>
    <string	name="precio">Minimo $200, Maximo $600</string> 
    <string	name="donde_pagar">Donde Pagar</string>    
    <string	name="nota_costo_multa">Nota: El número de días dependera de la evaluación que haga el agente detransito sobre el castigo meritorio</string>
    
    <string name="titulo_ubicacion">UBICACIÓN</string>
    <string name="ubicacion">N/D</string>
    <string name="titulo_horario">HORARIO</string>
    <string name="horario">N/D</string>
    <string name="titulo_tipo_cobro">TIPO DE COBRO</string>
    <string name="tipo_cobro">Efectivo y Tarjeta de Credito</string>
    <string name="titulo_direccion">DIRECCIÓN</string>
    <string name="direccion">N/D</string>
    <string name="nota_lugares_cobro">Nota: Para recoger su garantía tendrá que dirigirse al C.A.M. </string>
    <string name="btn_llevame">¡LLEVAME!</string>
    <string name="ver_mas">ver más...</string>
    <string name="nota_cam">*Para recoger su garantía tendrá que dirigirse al C.A.M. **Forma de Pago Efectivo y Tarjeta de Credito </string>
    
    
    
    <string	name="item_26">Conducir vehículos o permitir que se haga sin la licencia o permiso correspondiente, o estando roto,deteriorado o ilegible</string>
    <string	name="item_6">Circular sin placas o permiso de circulación correspondientes a</string>
    <string	name="item_87">Provocar, intencional o negligentemente, un accidente de tránsito</string>
    
    
    <string name="titleDialogNoInternet">Conexion a Internet</string>
    <string name="mensajeDialogNoInternet">Tu dispositivo no tiene Conexion a Internet, ¿Deseas conectarte?</string>
    <string name="alert_dialog_ok">Si</string>
    <string name="alert_dialog_no">No</string>
    

</resources>
